Ajustes no layout listCategorias e remoção da startactivit de classe removida.

--- a/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
+++ b/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list_item"
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:orientation="vertical">
 
     <LinearLayout
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/textListItem"
@@ -17,18 +16,19 @@
             android:layout_height="wrap_content"
             android:text="Nome"
             android:textAlignment="center"
-            android:textSize="18sp"
-            android:textColor="#393838"/>
+            android:textColor="#393838"
+            android:textSize="18sp" />
     </LinearLayout>
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
         <View
             android:id="@+id/divider11"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:background="?android:attr/listDivider" />
     </LinearLayout>
