--- a/Alzy/app/src/main/res/layout/activity_categorias.xml
+++ b/Alzy/app/src/main/res/layout/activity_categorias.xml
@@ -53,6 +53,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
+        <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@mipmap/ic_carteira" />
+
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fb_voltar"
             android:layout_width="85dp"
