--- a/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
+++ b/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item"
     android:layout_width="match_parent"
     android:layout_height="60dp"
@@ -10,14 +12,29 @@
         android:layout_height="wrap_content"
         android:padding="10dp">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageViewListCategorias"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                tools:srcCompat="@mipmap/ic_contas" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/textListItem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="5dp"
             android:text="Nome"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:textColor="#393838"
             android:textSize="18sp" />
+
     </LinearLayout>
 
     <LinearLayout
