--- a/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
+++ b/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -23,6 +23,15 @@
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 tools:srcCompat="@mipmap/ic_contas" />
+
+            <TextView
+                android:id="@+id/textViewIcone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Teste"
+                android:textAlignment="center"
+                android:textSize="8sp" />
         </LinearLayout>
 
         <TextView
