--- a/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
+++ b/Alzy/app/src/main/res/layout/list_categorias_adapter.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:padding="5dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -19,8 +19,8 @@
 
             <ImageView
                 android:id="@+id/imageViewListCategorias"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_weight="1"
                 tools:srcCompat="@mipmap/ic_contas" />
 
@@ -37,7 +37,7 @@
         <TextView
             android:id="@+id/textListItem"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:text="Nome"
             android:textAlignment="textStart"
