--- a/Alzy/app/src/main/res/layout/activity_cadastro.xml
+++ b/Alzy/app/src/main/res/layout/activity_cadastro.xml
@@ -156,7 +156,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="245dp"
         android:layout_height="245dp"
-        android:background="@color/whiteColorAux"
+        android:background="@mipmap/backp_rogress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
