--- a/Alzy/app/src/main/res/layout/activity_login.xml
+++ b/Alzy/app/src/main/res/layout/activity_login.xml
@@ -160,7 +160,7 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="245dp"
         android:layout_height="245dp"
-        android:background="@color/whiteColorAux"
+        android:background="@mipmap/backp_rogress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
